<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_marginTop="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/step1data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/step1data" />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/step2data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/givePermissions"
        android:onClick="givePermissions"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Get Permissions"
        android:layout_gravity="center"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/permissions"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step3"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/step3data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/step3data"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editText"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:hint="Telegram id"
            android:inputType="number" />
        <Button
            android:id="@+id/save"
            android:onClick="save"
            android:textAllCaps="false"
            android:layout_width="148dp"
            android:layout_height="49dp"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>
</ScrollView>